--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
@@ -14,9 +14,7 @@
         $("#IdBanco").change(function () {
             armar_diario();
         });
-        $("#IdTipoNota").change(function () {
-            armar_diario();
-        });
+
         $("#IdTipo_Persona").change(function () {
             vaciar_detalles();
             IdEntidad.SetValue(null);
@@ -172,7 +170,7 @@ function GetListBancoPorSucursal() {
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
             IdBanco: $("#IdBanco").val(),
-            IdTipoNota: $("#IdTipoNota").val(),
+            IdTipoNota: IdTipoNota.GetValue(),
             IdTransaccionSession: $("#IdTransaccionSession").val(),
             Valor: $("#cb_Valor").val()
         }
@@ -290,14 +288,14 @@ function GetListBancoPorSucursal() {
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-5">
                 <div class="form-group">
                     <label for="IdTipoNota">Tipo de nota:*</label>
-                    @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_tipo_nota, "IdTipoNota", "Descripcion"), new { @class = "form-control" })
+                    @Html.Partial("_CmbTipoNota", Model.IdTipoNota)
                     @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-offset-1 col-md-2">
+            <div class="col-md-offset-2 col-md-2">
                 <div class="form-group">
                     <label for="cb_Fecha">Fecha:*</label>
                     <div class="input-group date">
