--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoCuentaContable/_GridViewPartial_Emp_CtaCont.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoCuentaContable/_GridViewPartial_Emp_CtaCont.cshtml
@@ -1,15 +1,35 @@
 @using System.Web.UI.WebControls;
 @{
-    var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "_GridView_Emp_CtaCont";
-        settings.CallbackRouteValues = new { Controller = "Cargo", Action = "_GridViewPartial_Emp_CtaCont" };
-
+    var grid = Html.DevExpress().GridView(settings =>
+    {
+        settings.Name = "GridView_Emp_CtaCont";
+        settings.CallbackRouteValues = new { Controller = "Empleado", Action = "GridViewPartial_Emp_CtaCont" };
+        settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdCargo";
+
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "EmpleadoCuentaContable", Action = "EditingAddNew", Area = "RRHH" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "EmpleadoCuentaContable", Action = "EditingUpdate", Area = "RRHH" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "EmpleadoCuentaContable", Action = "EditingDelete", Area = "RRHH" };
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
-        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.Control;
+
+
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowNewButton = false;
+        settings.CommandColumn.ShowEditButton = true;
+        settings.CommandColumn.ShowDeleteButton = true;
+
+        settings.SettingsContextMenu.Enabled = true;
+        settings.SettingsBehavior.EnableCustomizationWindow = true;
+
+        settings.Settings.ShowFooter = true;
+        settings.SettingsPager.Visible = true;
+        settings.Settings.ShowGroupPanel = false;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
+
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
@@ -17,84 +37,51 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
+        //Funcion para inicializar fila al presionar nuevo
 
-        settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
-        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
-        settings.Settings.VerticalScrollableHeight = 400;
-        settings.SettingsPager.Visible = true;
-        settings.SettingsPager.PageSize = 10;
-        settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
-        settings.SettingsPager.AlwaysShowPager = true;
-
-
-        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-        settings.Settings.ShowFilterRow = true;
-        settings.Settings.ShowHeaderFilterButton = true;
-        settings.SettingsBehavior.AllowSelectByRowClick = true;
-
-
-        settings.SettingsExport.EnableClientSideExportAPI = true;
-        settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
-        settings.Toolbars.Add(t =>
-        {
-            t.EnableAdaptivity = true;
-            t.Items.Add(GridViewToolbarCommand.ExportToPdf).Text = "Exportar a PDF";
-            t.Items.Add(GridViewToolbarCommand.ExportToXls).Text = "Exportar a XLS";
-            t.Items.Add(GridViewToolbarCommand.ExportToXlsx).Text = "Exportar a XLSX";
-            t.Items.Add(GridViewToolbarCommand.ExportToDocx).Text = "Exportar a DOCX";
-            t.Items.Add(GridViewToolbarCommand.ExportToRtf).Text = "Exportar a RTF";
-            t.Items.Add(GridViewToolbarCommand.ExportToCsv).Text = "Exportar a CSV";
-        });
-        settings.SettingsExport.RenderBrick = (sender, e) =>
-        {
-            if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
-                e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
-        };
-        settings.HtmlRowPrepared = (s, e) =>
-        {
-            if (Convert.ToString(e.GetValue("Estado")) == "I")
-            {
-                e.Row.ForeColor = System.Drawing.Color.Red;
-            }
-        };
-        settings.Columns.Add(c =>
-        {
-            c.Caption = "#";
-            c.SetDataItemTemplateContent(tc =>
-            {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdCargo = DataBinder.Eval(tc.DataItem, "IdCargo") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdCargo = DataBinder.Eval(tc.DataItem, "IdCargo") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
-            });
-            c.SetHeaderTemplateContent(tc =>
-            {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
-                );
-            });
-            c.Settings.AllowDragDrop = DefaultBoolean.False;
-            c.Settings.AllowSort = DefaultBoolean.False;
-            c.Width = Unit.Pixel(150);
-        });
-
-        settings.Columns.Add("IdCargo", "ID").Width=Unit.Percentage(10);
-        settings.Columns.Add("ca_descripcion","Cargo").Width = Unit.Percentage(80);
         settings.Columns.Add(column =>
         {
-            column.FieldName = "EstadoBool";
-            column.Caption = "Estado";
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
-            column.EditorProperties().CheckBox(sp =>
+            column.FieldName = "IdJornada";
+            column.Caption = "Jornada";
+            column.Width = Unit.Percentage(50);
+            column.EditorProperties().ComboBox(p =>
             {
+                p.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(100);
+                p.TextField = "Descripcion";
+                p.ValueField = "IdJornada";
+                p.ValueType = typeof(int);
+                p.DataSource = ViewBag.lst_jor;
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "ValorHora";
+            column.Caption = "Valor hora";
+            column.Width = Unit.Percentage(15);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
 
             });
         });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "MaxNumHoras";
+            column.Caption = "Máximo número de horas";
+            column.Width = Unit.Percentage(15);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
+
+            });
+        });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
 
     });
+
 }
 @grid.Bind(Model).GetHtml()
