--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/Anular.cshtml
@@ -244,7 +244,7 @@
     </div>
 
     <div class="box-footer">
-        <button type="button" class="btn btn-danger" onclick="Post();" id="ButtonPost">Anular</button>
+        <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index", "LiquidacionTarjetaCredito", new { Area = "CuentasPorCobrar" }, null)">Cancelar</a>
     </div>
     @section Scripts {
