--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/_GridViewPartial_pagos_cheques_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/_GridViewPartial_pagos_cheques_det.cshtml
@@ -120,6 +120,7 @@
         {
             column.FieldName = "Saldo";
             column.Caption = "Saldo";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
             column.EditorProperties().SpinEdit(sp =>
             {
