--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Nuevo.cshtml
@@ -46,27 +46,33 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-3">
                 <div class="form-group">
                     <label for="ru_tipo">Tipo rubro*</label>
                     @Html.DropDownListFor(q => q.ru_tipo, new SelectList(ViewBag.lst_tipo_rubro, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.ru_tipo, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-3">
                 <div class="form-group">
-                    <label for="ru_tipo">Grupo*</label>
+                    <label for="ru_tipo">Grupo rol individual*</label>
                     @Html.DropDownListFor(q => q.rub_grupo, new SelectList(ViewBag.lst_grupo, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.rub_grupo, "", new { @class = "text-danger" })
                 </div>
             </div>
+
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="ru_tipo">Grupo rol general*</label>
+                    @Html.DropDownListFor(q => q.rub_GrupoResumen, new SelectList(ViewBag.lst_grupo_rep_gene, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.rub_GrupoResumen, "", new { @class = "text-danger" })
+                </div>
+            </div>
         </div>
     </div>
+
+
 
     <div class="row">
         <div class="col-md-12">
