--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
@@ -68,6 +68,9 @@
                         <div class="form-group">
                             <label for="mostrar_saldos_en_0">@Html.CheckBoxFor(q => q.mostrar_saldos_en_0) Mostrar stock 0</label>
                         </div>
+                        <div class="form-group">
+                            <label for="mostrar_agrupado">@Html.CheckBoxFor(q => q.mostrar_agrupado) Mostrar agrupado</label>
+                        </div>
                     </div>
                 </div>
             </div>
