--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_009.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_009.cshtml
@@ -50,7 +50,7 @@
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="IdRubro">Area</label>
-                            @Html.Partial("_CmbArea_reportes", Model.IdArea)
+                            @Html.Partial("_CmbArea_Individual", Model.IdArea)
                         </div>
                     </div>
                     <div class="col-md-4">
