--- a/ERP/Core.Erp.Web/Areas/Migraciones/Views/FacturasEventos/_GridViewPartial_facturas_eventos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Migraciones/Views/FacturasEventos/_GridViewPartial_facturas_eventos.cshtml
@@ -47,6 +47,8 @@
 
         settings.Columns.Add("cod_evento", "Codigo evento").Width = Unit.Percentage(5);
         settings.Columns.Add("cod_fact", "Codigo fac.").Width = Unit.Percentage(5);
+        settings.Columns.Add("nu_ced_ruc", "Cédula").Width = Unit.Percentage(5);
+        
         settings.Columns.Add("apellidos", "Apellidos").Width = Unit.Percentage(20);
         settings.Columns.Add("nombres", "Nombres").Width = Unit.Percentage(20);
 
