--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/MotivoInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/MotivoInventario/Nuevo.cshtml
@@ -36,11 +36,18 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="Tipo_Ing_Egr">Donde se muestra este motivo*</label>
                     @Html.DropDownListFor(q => q.Tipo_Ing_Egr, new SelectList(ViewBag.lst_tipos, "IdCatalogo", "Nombre"), new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Tipo_Ing_Egr, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="form-group">
+                    <label for="Codigo">Cuenta Contable</label>
+                    @Html.Partial("_CmbCtaCble", Model.IdCtaCble)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
