--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoMovimiento/_CmbTipoFlujo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoMovimiento/_CmbTipoFlujo.cshtml
@@ -18,6 +18,6 @@
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
     })
      .BindList(new Core.Erp.Web.Areas.Banco.Controllers.TipoFlujoMovimientoController().get_list_bajo_demanda_tipoflujo, new Core.Erp.Web.Areas.Banco.Controllers.TipoFlujoMovimientoController().get_info_bajo_demanda_tipoflujo)
-    .Bind((Model.GetType() == typeof(Core.Erp.Info.Banco.ba_TipoFlujo_Info) || Model.GetType() == typeof(Core.Erp.Info.Banco.ba_TipoFlujo_Movimiento_Info) || Model.GetType() == typeof(List<Core.Erp.Info.Banco.ba_TipoFlujo_Movimiento_Info>) || Model == 0) ? "" : Model);
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.Banco.ba_TipoFlujo_Movimiento_Info) ? "" : Model);
     }
 @comboBox.GetHtml()
